--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -24,9 +24,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js 16.x
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v4
         with:
           node-version: 16.x
+          cache: 'npm'
       - name: change directory
         run: cd js
       - name: Install dependencies
