--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -25,10 +25,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 16.x
-          cache: 'npm'
-      - name: change directory
-        run: cd js
       - name: Install dependencies
+        working-directory: ./js
         run: npm install
       - name: Run tests
+        working-directory: ./js
         run: npm test
